--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </nav>
       <figure class="figure mx-auto d-block text-center" style="margin-top: 50px;">
         <figcaption class="figure-caption">Homo无处不在</figcaption>
-        <img src="homo.jpeg" class="figure-img img-fluid rounded " width="300" height="300" alt="114514">
-        <img src="youya.jpeg" class="figure-img img-fluid rounded" width="300" height="300" alt="114514">
+        <img src="https://api.cloudery.cn/cdn-assets/114514/homo.png" class="figure-img img-fluid rounded " width="300" height="300" alt="114514">
+        <img src="https://api.cloudery.cn/cdn-assets/114514/youya.png" class="figure-img img-fluid rounded" width="300" height="300" alt="114514">
         </br></br>
         <link rel="stylesheet" type="text/css" href="css/button.css">
         <a class="button" href="https://cloudery.cn">云术团队</a>
