--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       </nav>
       <figure class="figure mx-auto d-block text-center" style="margin-top: 50px;">
         <figcaption class="figure-caption">Homo无处不在</figcaption>
-        <img src="https://api.cloudery.cn/cdn-assets/114514/homo.png" class="figure-img img-fluid rounded " width="300" height="300" alt="114514">
-        <img src="https://api.cloudery.cn/cdn-assets/114514/youya.png" class="figure-img img-fluid rounded" width="300" height="300" alt="114514">
+        <img src="homo.jpeg" class="figure-img img-fluid rounded " width="300" height="300" alt="114514">
+        <img src="youya.jpeg" class="figure-img img-fluid rounded" width="300" height="300" alt="114514">
         </br></br>
         <link rel="stylesheet" type="text/css" href="css/button.css">
         <a class="button" href="https://cloudery.cn">云术团队</a>
         <a class="button" href="https://lkdns.top">免费获得本域名1</a>
-        <a class="button" href="https://lkdns.xyz">免费获得本域名2</a>
+        <a class="button" href="http://cn.lkdns.xyz/login">免费获得本域名2</a>
         <a class="button" href="https://github.com/ABCDCreeper/homo-114514.xyz">Github源码</a>
       
       </br></br>
