--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="homo.jpeg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            HomoのWebsite! -- 114514.team
+            HomoのWebsite! -- 114514.fan
           </a>
         </div>
       </nav>
@@ -22,8 +22,7 @@
         </br></br>
         <link rel="stylesheet" type="text/css" href="css/button.css">
         <a class="button" href="https://cloudery.cn">云术团队</a>
-        <a class="button" href="https://lkdns.top">免费获得本域名1</a>
-        <a class="button" href="http://cn.lkdns.xyz/login">免费获得本域名2</a>
+        <a class="button" href="https://lkdns.org">免费获得本域名</a>
         <a class="button" href="https://github.com/ABCDCreeper/homo-114514.xyz">Github源码</a>
       
       </br></br>
